Resolves: tdf#148163 Preserve names of bad cell reference input again

A regression of

    commit e247262327d04ad9933f4af354050f4420c6e303
    CommitDate: Tue Jul 30 23:49:55 2013 -0400

        More on avoiding direct access to data members.

that changed, for example, invalid sheet references

-                aRef.nTab = MAXTAB+3;
+                aRef.SetTabDeleted(true);

The then following

    commit 8a19af57bbcc57a02a7d87c6408d1e3212a6deba
    CommitDate: Tue Jul 30 23:50:03 2013 -0400

        Now nobody accesses reference members directly. Make them private.

changed ScSingleRefData::Valid()

-    return  nCol >= 0 && nCol <= MAXCOL &&
-            nRow >= 0 && nRow <= MAXROW &&
-            nTab >= 0 && nTab <= MAXTAB;
+    return ColValid() && RowValid() && TabValid();

without taking the deleted flags into account, where previous to
commit e247262327d04ad9933f4af354050f4420c6e303 nTab > MAXTAB
fulfilled the condition of not valid.

This makes it necessary to adjust the
TestFormula::testFuncRangeOp() test case that relied on the broken
behaviour.

Change-Id: I42e769ca0d56a2eb786bb6f65917f0c15d082763
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/135453
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins